@@ -93,20 +93,31 @@
 
                 </configuration>
             </plugin>
-
+<!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
-                <configuration>
-                    <source>11</source>
-                    <target>11</target>
+               &lt;!&ndash; <configuration>
+                    &lt;!&ndash;<source>1.8</source>
+                    <target>1.8</target>&ndash;&gt;
                     <encoding>utf-8</encoding>
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
                     <compilerArgument>
-                        --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+                        &#45;&#45;add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
                     </compilerArgument>
+                </configuration>&ndash;&gt;
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.4.2</version>
+                <configuration>
+                    <skipTests>true</skipTests>
                 </configuration>
             </plugin>
         </plugins>
